--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
+    "html-react-parser": "^5.2.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1"
